# BLE_DEVICE

./: README.md  Simplicity Studio.desktop
BLE_DEVICE/: BLE_DEVICE.code-workspace
BLE_DEVICE/bt_soc_empty/: .projectchecksums  .projectlinkstore  app.c  bt_soc_empty.pintool  bt_soc_empty.slcp  bt_soc_empty.slps  main.c  vscode.conf
BLE_DEVICE/bt_soc_empty/autogen/: gatt_db.h
BLE_DEVICE/bt_soc_empty/autogen/.slc_state/: .crc_config.crc
BLE_DEVICE/bt_soc_empty/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
BLE_DEVICE/bt_soc_empty/bsp/bsp_bootloader/: bsp_bootloader.c
BLE_DEVICE/bt_soc_empty/bsp/bsp_i2c/: bsp_i2c.c
BLE_DEVICE/bt_soc_empty/bsp/bsp_pwm/: bsp_pwm.c  bsp_pwm.h
BLE_DEVICE/bt_soc_empty/bsp/bsp_uart/: bsp_uart.c  bsp_uart.h
BLE_DEVICE/bt_soc_empty/cmake_gcc/: CMakePresets.json  bt_soc_empty.cmake  toolchain.cmake
BLE_DEVICE/bt_soc_empty/config/: pin_config.h  sl_board_control_config.h  sl_mx25_flash_shutdown_usart_config.h  sl_rail_util_pa_tables_config.h  sl_rail_util_pti_config.h
BLE_DEVICE/bt_soc_empty/config/btconf/: slc_args.json
BLE_DEVICE/bt_soc_empty/linux_kernel_driver/: Kconfig  MCU_PATCH.txt  Makefile  efr32_i2c_test.c
BLE_MCU/: BLE_MCU.code-workspace  build_all.sh  connect_create_gbl_image.sh
BLE_MCU/.claude/: settings.local.json
BLE_MCU/BLE_MCU/: .clangd  .projectlinkstore  BLE_MCU.pintool  BLE_MCU.slcp  BLE_MCU.slpb  BLE_MCU.slps  app.c  compile_commands.json  main.c
BLE_MCU/BLE_MCU/.uceditor/: .BLE_MCU.%extension-silabs.simplicity_sdk%mx25_flash_shutdown_usart.cedit
BLE_MCU/BLE_MCU/autogen/: gatt_db.c  linkerfile.ld  sl_component_catalog.h  sl_event_handler.c
BLE_MCU/BLE_MCU/autogen/.slc_state/: .crc_config.crc
BLE_MCU/BLE_MCU/autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
BLE_MCU/BLE_MCU/cmake_gcc/: BLE_MCU.cmake  CMakeLists.txt
BLE_MCU/BLE_MCU/config/: pin_config.h  sl_board_control_config.h  sl_clock_manager_oscillator_config.h  sl_mx25_flash_shutdown_usart_config.h  sl_rail_util_pti_config.h
BLE_MCU/bootloader-uart-xmodem/: .projectlinkstore  bootloader-uart-xmodem.pintool  bootloader-uart-xmodem.slcp  bootloader-uart-xmodem.slps  vscode.conf
BLE_MCU/bootloader-uart-xmodem/artifact/: bootloader-uart-xmodem-crc.s37  bootloader-uart-xmodem.s37
BLE_MCU/bootloader-uart-xmodem/autogen/: linkerfile.ld
BLE_MCU/bootloader-uart-xmodem/cmake_gcc/: CMakeLists.txt  CMakePresets.json  bootloader-uart-xmodem.cmake
BLE_MCU/bootloader-uart-xmodem/config/: btl_core_cfg.h  btl_debug_cfg.h  btl_uart_driver_cfg.h  btl_xmodem_config.h  pin_config.h  sl_fault_injection_hardening_cfg.h  sl_mbedtls_trustzone_config.h  sl_memory_manager_region_config.h
linux_kernel_driver/: README_MTK.txt  efr32_i2c.c
temp/: .projectlinkstore  vscode.conf
temp/cmake_gcc/: CMakePresets.json
v6_workspace/: v6_workspace.code-workspace
v6_workspace/.metadata/: .openedProjects  .recentProjects  log.txt
v6_workspace/.metadata/.cache/: com.silabs.ss.framework.project.core-BLE_Bootloader_test-projectRegistry.cache.settings  com.silabs.ss.framework.project.core-BLE_Bootloader_test-solutionRegistry.cache.settings  com.silabs.ss.framework.project.core-BLE_DEVICE-projectRegistry.cache.settings  com.silabs.ss.framework.project.core-BLE_DEVICE-solutionRegistry.cache.settings  com.silabs.ss.framework.project.core-BLE_MCU-projectRegistry.cache.settings  com.silabs.ss.framework.project.core-BLE_MCU-solutionRegistry.cache.settings  com.silabs.ss.framework.project.core-modules.cache.settings  com.silabs.ss.framework.project.core-test-projectRegistry.cache.settings  com.silabs.ss.framework.project.core-test-solutionRegistry.cache.settings  com.silabs.ss.framework.project.core-v6_workspace-projectRegistry.cache.settings  com.silabs.ss.framework.project.core-v6_workspace-solutionRegistry.cache.settings  com.silabs.ss.framework.project.core-workspaceRegistry.cache.settings  com.silabs.ss.framework.project.templates.core-templateManager.cache.settings  com.silabs.ss.platform.demos.core-demoRegistry.cache.settings  com.silabs.ss.platform.sdk.core-protocolRegistry.cache.settings  com.silabs.ss.platform.sdk.core-sdkManager.cache.settings
(+47 files in other folders)
